--- a/coin-iaas/authorization-server/pom.xml
+++ b/coin-iaas/authorization-server/pom.xml
@@ -3,13 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>coin-exchange</artifactId>
+        <artifactId>coin-iasas</artifactId>
         <groupId>com.elevenchu</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>coin-iasas</artifactId>
+    <artifactId>authorization-server</artifactId>
 
 
 </project>
