--- a/coin-iaas/pom.xml
+++ b/coin-iaas/pom.xml
@@ -2,15 +2,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>coin-exchange</artifactId>
+        <groupId>com.elevenchu</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.elevenchu</groupId>
-    <artifactId>coin-exchange</artifactId>
+    <artifactId>coin-iasas</artifactId>
     <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
     <modules>
-        <module>coin-iaas</module>
-
+        <module>authorization-server</module>
+        <module>gateway-server</module>
     </modules>
 
 
