--- a/coin-member/member-api/pom.xml
+++ b/coin-member/member-api/pom.xml
@@ -2,18 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>coin-member</artifactId>
+        <groupId>com.elevenchu</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.elevenchu</groupId>
-    <artifactId>coin-exchange</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
-    <modules>
-        <module>coin-iaas</module>
-        <module>coin-admin</module>
-        <module>coin-member</module>
-
-    </modules>
+    <artifactId>member-api</artifactId>
 
 
 </project>
