--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
         <module>coin-statistics</module>
         <module>match-engine</module>
         <module>exchange-engine</module>
+        <module>coin-common</module>
 
     </modules>
 
