--- a/coin-finance/finance-service/pom.xml
+++ b/coin-finance/finance-service/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>finance-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>finance-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
