--- a/match-engine/match-service/pom.xml
+++ b/match-engine/match-service/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>match-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>match-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
