--- a/coin-admin/admin-service/pom.xml
+++ b/coin-admin/admin-service/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>admin-service</artifactId>
-
+<dependencies>
+    <dependency>
+        <groupId>com.elevenchu</groupId>
+        <artifactId>admin-api</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+</dependencies>
 
 </project>
