--- a/coin-statistics/statistics-service/pom.xml
+++ b/coin-statistics/statistics-service/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>statustucs-service</artifactId>
-
+    <dependencies>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>statistic-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 
 </project>
