--- a/exchange-engine/exchange-service/pom.xml
+++ b/exchange-engine/exchange-service/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>exchange-service</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>exchange-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
