--- a/exchange-engine/exchange-service/pom.xml
+++ b/exchange-engine/exchange-service/pom.xml
@@ -17,5 +17,17 @@
             <artifactId>exchange-api</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>coin-common</artifactId>
+        </dependency>
     </dependencies>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 </project>
