--- a/coin-iaas/authorization-server/src/main/resources/application.yml
+++ b/coin-iaas/authorization-server/src/main/resources/application.yml
@@ -7,3 +7,8 @@ spring:
     nacos:
       discovery:
         server-addr: nacos-server:8848
+
+  redis:
+    host: redis-server
+    port: 6380
+    password: Chufhulong1999
