--- a/coin-iaas/authorization-server/src/main/resources/application.yml
+++ b/coin-iaas/authorization-server/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
       discovery:
         server-addr: nacos-server:8848
 
-  redis:
-    host: redis-server
-    port: 6380
-    password: Chufhulong1999
+#  redis:
+#    host: redis-server
+#    port: 6380
+#    password: Chufhulong1999
