--- a/coin-common/pom.xml
+++ b/coin-common/pom.xml
@@ -69,11 +69,13 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
+            <version>2.7.0</version>
         </dependency>
         <!--        swagger2的web界面-->
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
         </dependency>
         <!--        web-->
         <dependency>
