--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <okhttp.version>3.11.0</okhttp.version>
         <okio.version>1.15.0</okio.version>
         <hutool.version>4.1.2</hutool.version>
+        <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
+        <springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
     </properties>
 
     <dependencies>
