--- a/coin-admin/admin-service/pom.xml
+++ b/coin-admin/admin-service/pom.xml
@@ -19,6 +19,7 @@
     <dependency>
         <groupId>com.elevenchu</groupId>
         <artifactId>coin-common</artifactId>
+        <version>1.0-SNAPSHOT</version>
     </dependency>
 </dependencies>
     <build>
