--- a/coin-common/pom.xml
+++ b/coin-common/pom.xml
@@ -111,6 +111,12 @@
             <version>1.2.74</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
