--- a/coin-admin/admin-service/pom.xml
+++ b/coin-admin/admin-service/pom.xml
@@ -12,9 +12,16 @@
     <artifactId>admin-service</artifactId>
 <dependencies>
     <dependency>
-        <groupId>com.elevenchu</groupId>
-        <artifactId>admin-api</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger2</artifactId>
+        <version>2.9.2</version>
+        <!--  <version>2.7.0</version>-->
+    </dependency>
+    <!--        swagger2的web界面-->
+    <dependency>
+        <groupId>io.springfox</groupId>
+        <artifactId>springfox-swagger-ui</artifactId>
+        <version>2.9.2</version>
     </dependency>
     <dependency>
         <groupId>com.elevenchu</groupId>
@@ -22,9 +29,19 @@
         <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
+        <groupId>com.elevenchu</groupId>
+        <artifactId>admin-api</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+
+    <dependency>
         <groupId>javax.servlet</groupId>
         <artifactId>javax.servlet-api</artifactId>
         <version>3.1.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
 
 </dependencies>
