--- a/pom.xml
+++ b/pom.xml
@@ -11,13 +11,13 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.2.3.RELEASE</version>
+        <version>2.2.5.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
         <java.version>1.8</java.version>
-        <spring-cloud.version>Hoxton.RELEASE</spring-cloud.version>
+        <spring-cloud.version>Hoxton.SR3</spring-cloud.version>
         <com-alibaba-cloud.version>2.2.0.RELEASE</com-alibaba-cloud.version>
         <mybatis-plus-boot-stater.version>3.3.2</mybatis-plus-boot-stater.version>
         <druid-boot-stater.version>1.1.23</druid-boot-stater.version>
@@ -36,9 +36,6 @@
         <joda-time.version>2.10</joda-time.version>
         <okhttp.version>3.11.0</okhttp.version>
         <okio.version>1.15.0</okio.version>
-        <hutool.version>4.1.2</hutool.version>
-        <springfox-swagger2.version>2.7.0</springfox-swagger2.version>
-        <springfox-swagger-ui.version>2.9.2</springfox-swagger-ui.version>
     </properties>
 
     <dependencies>
@@ -201,7 +198,6 @@
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
             </dependency>
-
         </dependencies>
     </dependencyManagement>
     <modules>
@@ -216,6 +212,5 @@
         <module>match-engine</module>
         <module>exchange-engine</module>
     </modules>
-
 
 </project>
