--- a/coin-admin/admin-service/pom.xml
+++ b/coin-admin/admin-service/pom.xml
@@ -46,8 +46,13 @@
     <dependency>
         <groupId>cn.hutool</groupId>
         <artifactId>hutool-all</artifactId>
+        <version>5.1.3</version>
     </dependency>
-
+    <!--           阿里云对象存储-->
+    <dependency>
+        <groupId>com.alibaba.cloud</groupId>
+        <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
