--- a/coin-member/member-service/pom.xml
+++ b/coin-member/member-service/pom.xml
@@ -19,7 +19,32 @@
         <dependency>
             <groupId>com.elevenchu</groupId>
             <artifactId>coin-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--        spring-cloud-alibaba-sms-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-starter-alicloud-sms</artifactId>
+        </dependency>
+
+        <!--        json的依赖-->
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20171018</version>
+        </dependency>
+
+
+        <!--mapStruct依赖 高性能对象映射-->
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-jdk8</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.mapstruct</groupId>
+            <artifactId>mapstruct-processor</artifactId>
+        </dependency>
+
     </dependencies>
     <build>
         <plugins>
