--- a/coin-member/member-service/pom.xml
+++ b/coin-member/member-service/pom.xml
@@ -44,6 +44,12 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-core</artifactId>
+            <version>2.9.2</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
     <build>
