--- a/coin-member/member-service/pom.xml
+++ b/coin-member/member-service/pom.xml
@@ -50,7 +50,24 @@
             <version>2.9.2</version>
             <scope>compile</scope>
         </dependency>
-
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.9.2</version>
+            <!--  <version>2.7.0</version>-->
+        </dependency>
+        <!--        swagger2的web界面-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.9.2</version>
+        </dependency>
+        <!--        hutool工具类-->
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+            <version>5.1.3</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
