--- a/coin-admin/admin-service/pom.xml
+++ b/coin-admin/admin-service/pom.xml
@@ -53,6 +53,11 @@
         <groupId>com.alibaba.cloud</groupId>
         <artifactId>spring-cloud-starter-alicloud-oss</artifactId>
     </dependency>
+    <dependency>
+        <groupId>com.elevenchu</groupId>
+        <artifactId>member-api</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
 </dependencies>
     <build>
         <plugins>
