--- a/coin-member/member-api/pom.xml
+++ b/coin-member/member-api/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>member-api</artifactId>
 
-
+    <dependencies>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>coin-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+    </dependencies>
 </project>
