--- a/coin-finance/finance-service/pom.xml
+++ b/coin-finance/finance-service/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>hutool-all</artifactId>
             <version>5.1.3</version>
         </dependency>
+        <dependency>
+            <groupId>net.sf.supercsv</groupId>
+            <artifactId>super-csv</artifactId>
+            <version>${csv.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
