--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <joda-time.version>2.10</joda-time.version>
         <okhttp.version>3.11.0</okhttp.version>
         <okio.version>1.15.0</okio.version>
+        <csv.version>2.4.0</csv.version>
     </properties>
 
     <dependencies>
