--- a/coin-finance/finance-api/pom.xml
+++ b/coin-finance/finance-api/pom.xml
@@ -10,6 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>finance-api</artifactId>
-
+<dependencies>
+    <dependency>
+        <groupId>com.elevenchu</groupId>
+        <artifactId>coin-common</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </dependency>
+</dependencies>
 
 </project>
