--- a/exchange-engine/exchange-service/pom.xml
+++ b/exchange-engine/exchange-service/pom.xml
@@ -29,6 +29,11 @@
             <scope>compile</scope>
         </dependency>
         <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>finance-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
             <version>2.9.2</version>
