--- a/coin-finance/finance-service/pom.xml
+++ b/coin-finance/finance-service/pom.xml
@@ -70,6 +70,12 @@
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct-processor</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>exchange-api</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
