--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,8 @@
         <okhttp.version>3.11.0</okhttp.version>
         <okio.version>1.15.0</okio.version>
         <csv.version>2.4.0</csv.version>
+        <affinity.version>3.1.7</affinity.version>
+        <tio.version>3.5.5.v20191010-RELEASE</tio.version>
     </properties>
 
     <dependencies>
@@ -123,6 +125,12 @@
                 <artifactId>disruptor</artifactId>
                 <version>${disruptor.version}</version>
             </dependency>
+            <!-- https://mvnrepository.com/artifact/com.lmax/disruptor -->
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>${disruptor.version}</version>
+            </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
@@ -198,6 +206,11 @@
                 <groupId>cn.hutool</groupId>
                 <artifactId>hutool-all</artifactId>
                 <version>${hutool.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.t-io</groupId>
+                <artifactId>tio-websocket-spring-boot-starter</artifactId>
+                <version>${tio.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
