--- a/exchange-engine/exchange-service/pom.xml
+++ b/exchange-engine/exchange-service/pom.xml
@@ -32,6 +32,7 @@
             <groupId>com.elevenchu</groupId>
             <artifactId>finance-api</artifactId>
             <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
@@ -50,6 +51,11 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-all</artifactId>
             <version>5.1.3</version>
+        </dependency>
+        <!--        spring-cloud-stream-rocketmq-->
+        <dependency>
+            <groupId>com.alibaba.cloud</groupId>
+            <artifactId>spring-cloud-stream-binder-rocketmq</artifactId>
         </dependency>
     </dependencies>
     <build>
