--- a/match-engine/match-service/pom.xml
+++ b/match-engine/match-service/pom.xml
@@ -56,6 +56,12 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-stream-binder-rocketmq</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.elevenchu</groupId>
+            <artifactId>exchange-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
